--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<div class="media-body text-center text-md-left">
 					<div class="lead">Hello, my name is</div>
 					<h2 class="mt-0 display-4 font-weight-bold">Patrick Reyes</h2>
-					<div class="bio mb-3">I'm a full-stack Web developer specialised in frontend and backend development for complex scalable web apps. Want to know how I may help your project? Check out my <a class="link-on-bg" href="resume.html">resume</a>.
+					<div class="bio mb-3">I'm a full-stack Web developer specialized in frontend and backend development for complex scalable web apps. Want to know how I may help your project? Check out my <a class="link-on-bg" href="resume.html">resume</a>.
 					</div><!--//bio-->
 					<a class="theme-btn-on-bg btn font-weight-bold theme-btn-cta" href="contact.html">Hire Me</a>
 					
